--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body {
+    font-family: "Lato", sans-serif;
+    background-color: #F6F6F6;
+}
+
+.react-multi-carousel-dot button {
+    background-color: #63d627;
+}
+
